--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>Student Details</p>
+		<table>
+			<tr>
+				<th>NAME</th>
+				<th>AGE</th>
+				<th>BRANCH</th>
+			</tr>
+			<tr>
+				<td>Shaw</td>
+				<td>20</td>
+				<td>CSE</td>
+			</tr>
+			<tr>
+				<td>Adil</td>
+				<td>21</td>
+				<td>ECE</td>
+			</tr>
+		</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
