--- a/main.html
+++ b/main.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Student Details</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<div>
-		
-		<table>
-			<p>Student Details</p>
+
+	<table>
+		<caption>Student Details</caption>
+		<thead>
 			<tr>
 				<th>NAME</th>
 				<th>AGE</th>
 				<th>BRANCH</th>
 			</tr>
+		</thead>
+		<tbody>
 			<tr>
 				<td>Shaw</td>
 				<td>20</td>
@@ -27,11 +26,9 @@
 				<td>21</td>
 				<td>ECE</td>
 			</tr>
-		</table>
-	</div>
-    <script type="text/javascript" src="./script.js">
-</script>
+		</tbody>
+	</table>
 
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
